// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SvgSourceForm :: getMainContextMenu SvgSourceForm :: getMainContextMenu :: empty entry points 1`] = `
Array [
  Object {
    "label": "Add component",
    "submenu": Array [
      Object {
        "code": "
<!-- VERTICAL GAUGE -->
<g transform=\\"translate(__TRANSLATE_FROM__,__TRANSLATE_TO__)\\">
  <path d=\\"M26,1 l24,0 l0,200 l-24,0 z\\" style=\\" fill:#DDD\\" />
  <g isis_animation=\\"scaleY\\" isis_ep=\\"__ENTRY_POINT__\\" isis_domain=\\"0,100\\"  isis_origin=\\"left, bottom\\">
    <g isis_animation=\\"colour\\" isis_ep=\\"__ENTRY_POINT__\\" isis_color_operators=\\"<|0|#e74c3c;;>=|0|#2ecc71;;>=|25|#3498db;;>=|50|#e74c3c;;>=|75|#f1c40f;;>=|100|#e74c3c\\">
      <path d=\\"M26,1 l24,0 l0,200 l-24,0 z\\" style=\\" fill:#5C2\\" />
    </g>
  </g>
  <g isis_animation=\\"translateY\\" isis_ep=\\"__ENTRY_POINT__\\" isis_domain=\\"0,100\\" isis_distance=\\"200\\" isis_direction=\\"bottom\\">
    <path d=\\"M23,-2 l0,3 l30,0 l0,-3 z\\" style=\\" fill: #666\\" />
  </g>
  <text x=\\"0\\" y=\\"200\\" fill=\\"#666\\" style=\\"font-size:10px\\">117</text>
  <text x=\\"0\\" y=\\"6\\" fill=\\"#666\\" style=\\"font-size:10px\\">120</text>
  <text x=\\"12\\" y=\\"150\\" fill=\\"#666\\" style=\\"font-weight:bold;font-size:11px;\\" transform=\\"rotate(-90, 12, 150)\\">__ENTRY_POINT__</text>
</g>
",
        "label": "Verical gauge",
      },
      Object {
        "code": "
<!-- HORIZONTAL GAUGE --> +
<g transform=\\"translate(__TRANSLATE_FROM__,__TRANSLATE_TO__)\\"> +
  <path d=\\"M1,16 l200,0 l0,24 l-200,0 z\\" style=\\" fill:#DDD\\" /> +
  <g isis_animation=\\"scaleX\\" isis_ep=\\"__ENTRY_POINT__\\" isis_domain=\\"0,100\\" isis_origin=\\"left,top\\" isis_scale=\\"0,100\\"> +
    <g isis_animation=\\"colour\\" isis_ep=\\"__ENTRY_POINT__\\" isis_color_operators=\\"<|0|#e74c3c;;>=|0|#2ecc71;;>=|25|#3498db;;>=|50|#e74c3c;;>=|75|#f1c40f;;>=|100|#e74c3c\\"> +
      <path d=\\"M1,16 l200,0 l0,24 l-200,0 z\\" style=\\" fill:#67D\\" /> +
    </g> +
  </g> +
  <g isis_animation=\\"translateX\\" isis_ep=\\"__ENTRY_POINT__\\" isis_domain=\\"0,100\\" isis_distance=\\"200\\" isis_direction=\\"right\\"> +
    <path d=\\"M0,13 l3,0 l0,30 l-3,0 z\\" style=\\" fill: #666\\" /> +
  </g> +
  <text x=\\"0\\" y=\\"4\\" fill=\\"#666\\" style=\\"font-size:10px\\">0</text> +
  <text x=\\"184\\" y=\\"4\\" fill=\\"#666\\" style=\\"font-size:10px\\">100</text> +
  <text x=\\"52\\" y=\\"4\\" fill=\\"#666\\" style=\\"font-weight:bold;font-size:11px;\\">__ENTRY_POINT__</text> +
  <g isis_x=\\"90\\" isis_y=\\"32\\"  isis_animation=\\"textBox\\" isis_ep=\\"__ENTRY_POINT__\\" isis_textcolor_operators=\\"<|0|#e74c3c;;>=|0|#2ecc71;;>=|25|#3498db;;>=|50|#e74c3c;;>=|75|#f1c40f;;>=|100|#e74c3c\\"></g> +
</g>;
",
        "label": "Horizontal gauge",
      },
      Object {
        "type": "separator",
      },
      Object {
        "code": "
<!-- VERTICAL SLIDER -->
<g transform=\\"translate(__TRANSLATE_FROM__,__TRANSLATE_TO__)\\">
  <path d=\\"M28,10 l6,0 l0,200, l-6,0 z\\" style=\\" fill: #DDD; stroke: #BBB;\\" />
  <g isis_animation=\\"translateY\\" isis_ep=\\"__ENTRY_POINT__\\" isis_domain=\\"0,100\\" isis_distance=\\"200\\" isis_direction=\\"top\\">
    <g isis_animation=\\"colour\\" isis_ep=\\"__ENTRY_POINT__\\"  isis_color_operators=\\"<|0|#e74c3c;;>=|0|#2ecc71;;>=|25|#3498db;;>=|50|#e74c3c;;>=|75|#f1c40f;;>=|100|#e74c3c\\">
        <ellipse cx=\\"31\\" cy=\\"210\\" rx=\\"8\\" ry=\\"8\\" style=\\"fill: #EEE; stroke: #BBB;\\" />
    </g>
  </g>
  <text x=\\"0\\" y=\\"212\\" fill=\\"#666\\" style=\\"font-size:10px\\">0</text>
  <text x=\\"0\\" y=\\"14\\" fill=\\"#666\\" style=\\"font-size:10px\\">100</text>
  <text x=\\"14\\" y=\\"160\\" fill=\\"#666\\" style=\\"font-weight:bold;font-size:11px;\\" transform=\\"rotate(-90, 14, 160)\\">__ENTRY_POINT__</text>
</g>
",
        "label": "Vertical slider",
      },
      Object {
        "code": "
<!-- HORIZONTAL SLIDER --> +
<g transform=\\"translate(__TRANSLATE_FROM__,__TRANSLATE_TO__)\\"> +
 <path d=\\"M10,10 l200,0 l0,6 l-200,0 z\\" style=\\" fill: #DDD; stroke: #BBB;\\" /> +
   <g isis_animation=\\"translateX\\" isis_ep=\\"__ENTRY_POINT__\\" isis_domain=\\"0,100\\" isis_distance=\\"200\\" isis_direction=\\"right\\"> +
   <g isis_animation=\\"colour\\" isis_ep=\\"__ENTRY_POINT__\\" isis_color_operators=\\"<|0|#e74c3c;;>=|0|#2ecc71;;>=|25|#3498db;;>=|50|#e74c3c;;>=|75|#f1c40f;;>=|100|#e74c3c\\"> +
     <ellipse cx=\\"31\\" cy=\\"14\\" rx=\\"8\\" ry=\\"8\\" style=\\"fill: #EEE; stroke: #BBB;\\" /> +
   </g> +
 </g> +
 <text x=\\"2\\" y=\\"34\\" fill=\\"#666\\" style=\\"font-size:10px\\">0</text> +
 <text x=\\"192\\" y=\\"34\\" fill=\\"#666\\" style=\\"font-size:10px\\">100</text> +
 <text x=\\"54\\" y=\\"34\\" fill=\\"#666\\" style=\\"font-weight:bold;font-size:11px;\\">__ENTRY_POINT__</text> +
</g>;
",
        "label": "Horizontal slider",
      },
      Object {
        "type": "separator",
      },
      Object {
        "code": "
<!-- KNOBE --> 
<g transform=\\"translate(__TRANSLATE_FROM__,__TRANSLATE_TO__)\\"> 
  <circle r=\\"80\\" cx=\\"100\\" cy=\\"100\\" stroke=\\"#FDE47F\\" transform=\\"rotate(126, 100, 100)\\" stroke-width=\\"10\\" fill=\\"none\\" stroke-dasharray=\\"402\\"></circle> 
  <g isis_animation=\\"rotate\\" isis_ep=\\"__ENTRY_POINT__\\" isis_domain=\\"117,121\\" isis_angle=\\"292\\" isis_origin=\\"center,center\\"> 
    <path d=\\"M100,30 l6,70 q-6,6 -12,0 z\\" style=\\"fill: #666\\" transform=\\"rotate(-0, 210, 90)\\" /> 
  </g> 
  <text x=\\"50\\" y=\\"130\\" fill=\\"#999\\" style=\\"font-weight:bold;font-size:11px;\\">__ENTRY_POINT__</text> 
  <text x=\\"14\\" y=\\"170\\" fill=\\"#999\\" style=\\"font-weight:bold;font-size:11px\\">117</text> 
  <text x=\\"92\\" y=\\"8\\" fill=\\"#999\\" style=\\"font-weight:bold;font-size:11px\\">119</text> 
  <text x=\\"168\\" y=\\"170\\" fill=\\"#999\\" style=\\"font-weight:bold;font-size:11px\\">121</text> 
</g>
",
        "label": "Knobe",
      },
      Object {
        "type": "separator",
      },
      Object {
        "code": "
<!-- CIRCUIT BREAKER --> 
<g id=\\"layer1\\" transform=\\"translate(0,-852.36218)\\"> 
  <rect style=\\"fill:#ffffff;fill-opacity:1;stroke:#000000;stroke-width:5;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none\\" id=\\"rect3780\\" width=\\"155.00168\\" height=\\"56.170212\\" x=\\"22.499161\\" y=\\"924.2771\\" /> 
  <path style=\\"fill:#000000;fill-rule:evenodd;stroke:#000000;stroke-width:5;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1\\" d=\\"m 0,100 20,0\\" id=\\"path3782\\" transform=\\"translate(0,852.36218)\\" /> 
  <path id=\\"path3788\\" d=\\"m 180,952.36218 20,0\\" style=\\"fill:#000000;fill-rule:evenodd;stroke:#000000;stroke-width:5;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none\\" /> 
  <path style=\\"fill:#000000;fill-rule:evenodd;stroke:#000000;stroke-opacity:1;stroke-width:5;stroke-miterlimit:4;stroke-dasharray:none\\" d=\\"m 50,70 0,60\\" id=\\"path3794\\" transform=\\"translate(0,852.36218)\\" /> 
  <path id=\\"path3800\\" d=\\"m 150,922.36218 0,60\\" style=\\"fill:#000000;fill-rule:evenodd;stroke:#000000;stroke-width:5;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none\\" /> 
</g>
",
        "label": "Circuit breaker",
      },
      Object {
        "code": "
<!-- DIODE --> 
<g transform=\\"translate(0,-852.36218)\\"> 
<path style=\\"fill:#000;fill-rule:evenodd;stroke:#000;stroke-width:4;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none\\" d=\\"m 0.09962822,952.36218 59.19999778,0\\" id=\\"path3782\\" /> 
<path id=\\"path3788\\" d=\\"m 141.10364,952.36218 58.8264,0\\" style=\\"fill:#000;fill-rule:evenodd;stroke:#000;stroke-width:4;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none\\" /> 
<path style=\\"fill:#fff;stroke:#000000;stroke-width:3.99281930999999980;stroke-linejoin:round;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none\\" id=\\"path2998\\" d=\\"M 105.22681,50 63.8067,73.913909 22.386597,97.827818 l 0,-47.827819 0,-47.8278165 41.420106,23.9139095 z\\" transform=\\"matrix(1,0,0,1.0036,38.749817,902.18218)\\" /> 
<rect style=\\"fill:#000;fill-opacity:1;stroke:#000;stroke-width:4;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none\\" id=\\"rect3016\\" width=\\"12.835206\\" height=\\"96\\" x=\\"145\\" y=\\"904.36218\\" /> 
</g>
",
        "label": "Diode",
      },
      Object {
        "code": " 
<!-- TRANSISTOR -->
<g>
 <ellipse stroke=\\"#000000\\" ry=\\"150\\" rx=\\"150\\" id=\\"svg_1\\" cy=\\"181\\" cx=\\"183\\" stroke-width=\\"6\\" fill=\\"#ffffff\\"/>
 <line fill=\\"none\\" stroke-width=\\"6\\" stroke-dasharray=\\"null\\" stroke-linejoin=\\"null\\" stroke-linecap=\\"null\\" x1=\\"4\\" y1=\\"180\\" x2=\\"107\\" y2=\\"180\\" id=\\"svg_2\\" stroke=\\"#000000\\"/>
 <rect fill=\\"#000000\\" stroke=\\"#000000\\" stroke-width=\\"6\\" stroke-dasharray=\\"null\\" stroke-linejoin=\\"null\\" stroke-linecap=\\"null\\" x=\\"106\\" y=\\"80\\" width=\\"38\\" height=\\"200\\" id=\\"svg_4\\"/>
 <line fill=\\"none\\" stroke=\\"#000000\\" stroke-width=\\"6\\" stroke-dasharray=\\"null\\" stroke-linejoin=\\"null\\" stroke-linecap=\\"null\\" x1=\\"146\\" y1=\\"159\\" x2=\\"256\\" y2=\\"103\\" id=\\"svg_5\\"/>
 <line fill=\\"none\\" stroke=\\"#000000\\" stroke-width=\\"6\\" stroke-dasharray=\\"null\\" stroke-linejoin=\\"null\\" stroke-linecap=\\"null\\" x1=\\"146\\" y1=\\"207\\" x2=\\"256\\" y2=\\"254\\" id=\\"svg_6\\"/>
 <line fill=\\"none\\" stroke=\\"#000000\\" stroke-width=\\"6\\" stroke-dasharray=\\"null\\" stroke-linejoin=\\"null\\" stroke-linecap=\\"null\\" x1=\\"254\\" y1=\\"105\\" x2=\\"254\\" y2=\\"3\\" id=\\"svg_7\\"/>/>
 <line fill=\\"none\\" stroke=\\"#000000\\" stroke-width=\\"6\\" stroke-dasharray=\\"null\\" stroke-linejoin=\\"null\\" stroke-linecap=\\"null\\" x1=\\"254\\" y1=\\"253\\" x2=\\"252\\" y2=\\"366\\" id=\\"svg_8\\" transform=\\"rotate(-0.7117121815681458 253.00000000001296,309.49999999999835) \\"/>
 <polygon id=\\"svg_9\\" fill=\\"#000000\\" points=\\"202,210.50515747070312 209.38092041015625,227.16769409179688 220.4522705078125,241.7474365234375 202,239.66461181640625 183.5477294921875,241.7474365234375 194.61911010742188,227.16769409179688 202,210.50515747070312 209.38092041015625,227.16769409179688 \\" stroke-width=\\"6\\" stroke=\\"#000000\\" transform=\\"rotate(-10.143350601196289 201.99999999999966,226.12628173828128) \\"/>
</g>
",
        "label": "Transistor",
      },
      Object {
        "type": "separator",
      },
      Object {
        "code": "
<!-- Multistate switch --> 
<g transform=\\"translate(__TRANSLATE_FROM__,__TRANSLATE_TO__)\\"> 
  <g isis_animation=\\"colour\\" isis_ep=\\"__ENTRY_POINT__\\" isis_color_operators=\\"<|0|#e74c3c;;>=|0|#2ecc71;;>=|25|#3498db;;>=|50|#e74c3c;;>=|75|#f1c40f;;>=|100|#e74c3c\\"> 
    <circle cx=\\"30\\" cy=\\"12\\" r=\\"10\\" stroke=\\"#444\\" stroke-width=\\"2\\" fill=\\"#EEE\\" /> 
  </g> 
  <text x=\\"20\\" y=\\"44\\" fill=\\"#666\\" style=\\"font-size:12px\\">St 1</text> 
  <g isis_animation=\\"colour\\" isis_ep=\\"__ENTRY_POINT__\\"  isis_color_operators=\\"<|0|#e74c3c;;>=|0|#2ecc71;;>=|25|#3498db;;>=|50|#e74c3c;;>=|75|#f1c40f;;>=|100|#e74c3c\\"> 
    <circle cx=\\"80\\" cy=\\"12\\" r=\\"10\\" stroke=\\"#444\\" stroke-width=\\"2\\" fill=\\"#EEE\\" /> 
  </g> 
  <text x=\\"70\\" y=\\"44\\" fill=\\"#666\\" style=\\"font-size:12px\\">St 2</text> 
  <g isis_animation=\\"colour\\" isis_ep=\\"__ENTRY_POINT__\\"  isis_color_operators=\\"<|0|#e74c3c;;>=|0|#2ecc71;;>=|25|#3498db;;>=|50|#e74c3c;;>=|75|#f1c40f;;>=|100|#e74c3c\\"> 
    <circle cx=\\"130\\" cy=\\"12\\" r=\\"10\\" stroke=\\"#444\\" stroke-width=\\"2\\" fill=\\"#EEE\\" /> 
  </g> 
  <text x=\\"120\\" y=\\"44\\" fill=\\"#666\\" style=\\"font-size:12px\\">St 3</text> 
</g>;
",
        "label": "Multistate switch",
      },
    ],
  },
  Object {
    "label": "Add animation",
    "submenu": Array [
      Object {
        "code": "
<g isis_animation=\\"scaleX\\" isis_ep=\\"__ENTRY_POINT__\\" isis_domain=\\"0,100\\" isis_fixed=\\"left\\">
<!-- PLACE HERE ELEMENTS TO ANIMATE--> 
</g>
",
        "label": "Scale X",
      },
      Object {
        "code": "
<g isis_animation=\\"scaleY\\" isis_ep=\\"__ENTRY_POINT__\\" isis_domain=\\"0,100\\" isis_fixed=\\"bottom\\">
<!-- PLACE HERE ELEMENTS TO ANIMATE--> 
</g>
",
        "label": "Scale Y",
      },
      Object {
        "type": "separator",
      },
      Object {
        "code": "
<g isis_animation=\\"translateX\\" isis_ep=\\"__ENTRY_POINT__\\" isis_domain=\\"0,100\\" isis_width=\\"200\\" isis_direction=\\"right\\"> 
<!-- PLACE HERE ELEMENTS TO ANIMATE--> 
</g>
",
        "label": "Translate X",
      },
      Object {
        "code": "
<g isis_animation=\\"translateY\\" isis_ep=\\"__ENTRY_POINT__\\" isis_domain=\\"0,100\\" isis_width=\\"200\\" isis_direction=\\"top\\"> 
<!-- PLACE HERE ELEMENTS TO ANIMATE--> 
</g>
",
        "label": "Translate Y",
      },
      Object {
        "type": "separator",
      },
      Object {
        "code": "<g isis_x=\\"\\" isis_y=\\"\\" isis_animation=\\"textBox\\" isis_ep=\\"__ENTRY_POINT__\\" isis_textcolor_operators=\\"<|0|#e74c3c;;>=|0|#2ecc71;;>=|25|#3498db;;>=|50|#e74c3c;;>=|75|#f1c40f;;>=|100|#e74c3c\\" isis_bgcolor_operators=\\"<|0|#e74c3c;;>=|0|#2ecc71;;>=|25|#3498db;;>=|50|#e74c3c;;>=|75|#f1c40f;;>=|100|#e74c3c\\" isis_size=\\"20\\">-</g>",
        "label": "Text box",
      },
      Object {
        "code": "
<g transform=\\"translate(__TRANSLATE_FROM__,__TRANSLATE_TO__)\\"> 
  <g isis_x=\\"0\\" isis_y=\\"0\\" isis_animation=\\"textBox\\" isis_ep=\\"__ENTRY_POINT__\\" isis_textcolor=\\"<|0|#e74c3c;;>=|0|#2ecc71;;>=|25|#3498db;;>=|50|#e74c3c;;>=|75|#f1c40f;;>=|100|#e74c3c\\" isis_font=\\"Digital\\" isis_size=\\"64px\\">-</g>	 
</g>;
",
        "label": "Digital display",
      },
      Object {
        "type": "separator",
      },
      Object {
        "code": "<g isis_animation=\\"rotate\\" isis_ep=\\"__ENTRY_POINT__\\" isis_domain=\\"0,100\\" isis_angle=\\"\\" isis_origin=\\"left,top\\"></g>",
        "label": "Rotation",
      },
      Object {
        "type": "separator",
      },
      Object {
        "code": "<g isis_animation=\\"show\\" isis_ep=\\"__ENTRY_POINT__\\" isis_operators=\\"<=|50|show;;>|50|hide\\"></g>",
        "label": "Show / hide",
      },
      Object {
        "type": "separator",
      },
      Object {
        "code": "<g isis_animation=\\"colour\\" isis_ep=\\"__ENTRY_POINT__\\"   isis_color_operators=\\"<=|50|#8AE;;>|50|#45C\\"></g>",
        "label": "Colour",
      },
    ],
  },
]
`;

exports[`SvgSourceForm :: getMainContextMenu SvgSourceForm :: getMainContextMenu :: some entry points 1`] = `
Array [
  Object {
    "label": "Add component",
    "submenu": Array [
      Object {
        "code": "
<!-- VERTICAL GAUGE -->
<g transform=\\"translate(__TRANSLATE_FROM__,__TRANSLATE_TO__)\\">
  <path d=\\"M26,1 l24,0 l0,200 l-24,0 z\\" style=\\" fill:#DDD\\" />
  <g isis_animation=\\"scaleY\\" isis_ep=\\"__ENTRY_POINT__\\" isis_domain=\\"0,100\\"  isis_origin=\\"left, bottom\\">
    <g isis_animation=\\"colour\\" isis_ep=\\"__ENTRY_POINT__\\" isis_color_operators=\\"<|0|#e74c3c;;>=|0|#2ecc71;;>=|25|#3498db;;>=|50|#e74c3c;;>=|75|#f1c40f;;>=|100|#e74c3c\\">
      <path d=\\"M26,1 l24,0 l0,200 l-24,0 z\\" style=\\" fill:#5C2\\" />
    </g>
  </g>
  <g isis_animation=\\"translateY\\" isis_ep=\\"__ENTRY_POINT__\\" isis_domain=\\"0,100\\" isis_distance=\\"200\\" isis_direction=\\"bottom\\">
    <path d=\\"M23,-2 l0,3 l30,0 l0,-3 z\\" style=\\" fill: #666\\" />
  </g>
  <text x=\\"0\\" y=\\"200\\" fill=\\"#666\\" style=\\"font-size:10px\\">117</text>
  <text x=\\"0\\" y=\\"6\\" fill=\\"#666\\" style=\\"font-size:10px\\">120</text>
  <text x=\\"12\\" y=\\"150\\" fill=\\"#666\\" style=\\"font-weight:bold;font-size:11px;\\" transform=\\"rotate(-90, 12, 150)\\">__ENTRY_POINT__</text>
</g>
",
        "label": "Verical gauge",
      },
      Object {
        "code": "
<!-- HORIZONTAL GAUGE --> +
<g transform=\\"translate(__TRANSLATE_FROM__,__TRANSLATE_TO__)\\"> +
  <path d=\\"M1,16 l200,0 l0,24 l-200,0 z\\" style=\\" fill:#DDD\\" /> +
  <g isis_animation=\\"scaleX\\" isis_ep=\\"__ENTRY_POINT__\\" isis_domain=\\"0,100\\" isis_origin=\\"left,top\\" isis_scale=\\"0,100\\"> +
    <g isis_animation=\\"colour\\" isis_ep=\\"__ENTRY_POINT__\\" isis_color_operators=\\"<|0|#e74c3c;;>=|0|#2ecc71;;>=|25|#3498db;;>=|50|#e74c3c;;>=|75|#f1c40f;;>=|100|#e74c3c\\"> +
      <path d=\\"M1,16 l200,0 l0,24 l-200,0 z\\" style=\\" fill:#67D\\" /> +
    </g> +
  </g> +
  <g isis_animation=\\"translateX\\" isis_ep=\\"__ENTRY_POINT__\\" isis_domain=\\"0,100\\" isis_distance=\\"200\\" isis_direction=\\"right\\"> +
    <path d=\\"M0,13 l3,0 l0,30 l-3,0 z\\" style=\\" fill: #666\\" /> +
  </g> +
  <text x=\\"0\\" y=\\"4\\" fill=\\"#666\\" style=\\"font-size:10px\\">0</text> +
  <text x=\\"184\\" y=\\"4\\" fill=\\"#666\\" style=\\"font-size:10px\\">100</text> +
  <text x=\\"52\\" y=\\"4\\" fill=\\"#666\\" style=\\"font-weight:bold;font-size:11px;\\">__ENTRY_POINT__</text> +
  <g isis_x=\\"90\\" isis_y=\\"32\\"  isis_animation=\\"textBox\\" isis_ep=\\"__ENTRY_POINT__\\" isis_textcolor_operators=\\"<|0|#e74c3c;;>=|0|#2ecc71;;>=|25|#3498db;;>=|50|#e74c3c;;>=|75|#f1c40f;;>=|100|#e74c3c\\"></g> +
</g>;
",
        "label": "Horizontal gauge",
      },
      Object {
        "type": "separator",
      },
      Object {
        "code": "
<!-- VERTICAL SLIDER -->
<g transform=\\"translate(__TRANSLATE_FROM__,__TRANSLATE_TO__)\\">
  <path d=\\"M28,10 l6,0 l0,200, l-6,0 z\\" style=\\" fill: #DDD; stroke: #BBB;\\" />
  <g isis_animation=\\"translateY\\" isis_ep=\\"__ENTRY_POINT__\\" isis_domain=\\"0,100\\" isis_distance=\\"200\\" isis_direction=\\"top\\">
    <g isis_animation=\\"colour\\" isis_ep=\\"__ENTRY_POINT__\\"  isis_color_operators=\\"<|0|#e74c3c;;>=|0|#2ecc71;;>=|25|#3498db;;>=|50|#e74c3c;;>=|75|#f1c40f;;>=|100|#e74c3c\\">
        <ellipse cx=\\"31\\" cy=\\"210\\" rx=\\"8\\" ry=\\"8\\" style=\\"fill: #EEE; stroke: #BBB;\\" />
    </g>
  </g>
  <text x=\\"0\\" y=\\"212\\" fill=\\"#666\\" style=\\"font-size:10px\\">0</text>
  <text x=\\"0\\" y=\\"14\\" fill=\\"#666\\" style=\\"font-size:10px\\">100</text>
  <text x=\\"14\\" y=\\"160\\" fill=\\"#666\\" style=\\"font-weight:bold;font-size:11px;\\" transform=\\"rotate(-90, 14, 160)\\">__ENTRY_POINT__</text>
</g>
",
        "label": "Vertical slider",
      },
      Object {
        "code": "
<!-- HORIZONTAL SLIDER --> +
<g transform=\\"translate(__TRANSLATE_FROM__,__TRANSLATE_TO__)\\"> +
 <path d=\\"M10,10 l200,0 l0,6 l-200,0 z\\" style=\\" fill: #DDD; stroke: #BBB;\\" /> +
   <g isis_animation=\\"translateX\\" isis_ep=\\"__ENTRY_POINT__\\" isis_domain=\\"0,100\\" isis_distance=\\"200\\" isis_direction=\\"right\\"> +
   <g isis_animation=\\"colour\\" isis_ep=\\"__ENTRY_POINT__\\" isis_color_operators=\\"<|0|#e74c3c;;>=|0|#2ecc71;;>=|25|#3498db;;>=|50|#e74c3c;;>=|75|#f1c40f;;>=|100|#e74c3c\\"> +
     <ellipse cx=\\"31\\" cy=\\"14\\" rx=\\"8\\" ry=\\"8\\" style=\\"fill: #EEE; stroke: #BBB;\\" /> +
   </g> +
 </g> +
 <text x=\\"2\\" y=\\"34\\" fill=\\"#666\\" style=\\"font-size:10px\\">0</text> +
 <text x=\\"192\\" y=\\"34\\" fill=\\"#666\\" style=\\"font-size:10px\\">100</text> +
 <text x=\\"54\\" y=\\"34\\" fill=\\"#666\\" style=\\"font-weight:bold;font-size:11px;\\">__ENTRY_POINT__</text> +
</g>;
",
        "label": "Horizontal slider",
      },
      Object {
        "type": "separator",
      },
      Object {
        "code": "
<!-- KNOBE --> 
<g transform=\\"translate(__TRANSLATE_FROM__,__TRANSLATE_TO__)\\"> 
  <circle r=\\"80\\" cx=\\"100\\" cy=\\"100\\" stroke=\\"#FDE47F\\" transform=\\"rotate(126, 100, 100)\\" stroke-width=\\"10\\" fill=\\"none\\" stroke-dasharray=\\"402\\"></circle> 
  <g isis_animation=\\"rotate\\" isis_ep=\\"__ENTRY_POINT__\\" isis_domain=\\"117,121\\" isis_angle=\\"292\\" isis_origin=\\"center,center\\"> 
    <path d=\\"M100,30 l6,70 q-6,6 -12,0 z\\" style=\\"fill: #666\\" transform=\\"rotate(-0, 210, 90)\\" /> 
  </g> 
  <text x=\\"50\\" y=\\"130\\" fill=\\"#999\\" style=\\"font-weight:bold;font-size:11px;\\">__ENTRY_POINT__</text> 
  <text x=\\"14\\" y=\\"170\\" fill=\\"#999\\" style=\\"font-weight:bold;font-size:11px\\">117</text> 
  <text x=\\"92\\" y=\\"8\\" fill=\\"#999\\" style=\\"font-weight:bold;font-size:11px\\">119</text> 
  <text x=\\"168\\" y=\\"170\\" fill=\\"#999\\" style=\\"font-weight:bold;font-size:11px\\">121</text> 
</g>
",
        "label": "Knobe",
      },
      Object {
        "type": "separator",
      },
      Object {
        "code": "
<!-- CIRCUIT BREAKER --> 
<g id=\\"layer1\\" transform=\\"translate(0,-852.36218)\\"> 
  <rect style=\\"fill:#ffffff;fill-opacity:1;stroke:#000000;stroke-width:5;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none\\" id=\\"rect3780\\" width=\\"155.00168\\" height=\\"56.170212\\" x=\\"22.499161\\" y=\\"924.2771\\" /> 
  <path style=\\"fill:#000000;fill-rule:evenodd;stroke:#000000;stroke-width:5;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1\\" d=\\"m 0,100 20,0\\" id=\\"path3782\\" transform=\\"translate(0,852.36218)\\" /> 
  <path id=\\"path3788\\" d=\\"m 180,952.36218 20,0\\" style=\\"fill:#000000;fill-rule:evenodd;stroke:#000000;stroke-width:5;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none\\" /> 
  <path style=\\"fill:#000000;fill-rule:evenodd;stroke:#000000;stroke-opacity:1;stroke-width:5;stroke-miterlimit:4;stroke-dasharray:none\\" d=\\"m 50,70 0,60\\" id=\\"path3794\\" transform=\\"translate(0,852.36218)\\" /> 
  <path id=\\"path3800\\" d=\\"m 150,922.36218 0,60\\" style=\\"fill:#000000;fill-rule:evenodd;stroke:#000000;stroke-width:5;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none\\" /> 
</g>
",
        "label": "Circuit breaker",
      },
      Object {
        "code": "
<!-- DIODE --> 
<g transform=\\"translate(0,-852.36218)\\"> 
<path style=\\"fill:#000;fill-rule:evenodd;stroke:#000;stroke-width:4;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none\\" d=\\"m 0.09962822,952.36218 59.19999778,0\\" id=\\"path3782\\" /> 
<path id=\\"path3788\\" d=\\"m 141.10364,952.36218 58.8264,0\\" style=\\"fill:#000;fill-rule:evenodd;stroke:#000;stroke-width:4;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none\\" /> 
<path style=\\"fill:#fff;stroke:#000000;stroke-width:3.99281930999999980;stroke-linejoin:round;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none\\" id=\\"path2998\\" d=\\"M 105.22681,50 63.8067,73.913909 22.386597,97.827818 l 0,-47.827819 0,-47.8278165 41.420106,23.9139095 z\\" transform=\\"matrix(1,0,0,1.0036,38.749817,902.18218)\\" /> 
<rect style=\\"fill:#000;fill-opacity:1;stroke:#000;stroke-width:4;stroke-miterlimit:4;stroke-opacity:1;stroke-dasharray:none\\" id=\\"rect3016\\" width=\\"12.835206\\" height=\\"96\\" x=\\"145\\" y=\\"904.36218\\" /> 
</g>
",
        "label": "Diode",
      },
      Object {
        "code": " 
<!-- TRANSISTOR -->
<g>
 <ellipse stroke=\\"#000000\\" ry=\\"150\\" rx=\\"150\\" id=\\"svg_1\\" cy=\\"181\\" cx=\\"183\\" stroke-width=\\"6\\" fill=\\"#ffffff\\"/>
 <line fill=\\"none\\" stroke-width=\\"6\\" stroke-dasharray=\\"null\\" stroke-linejoin=\\"null\\" stroke-linecap=\\"null\\" x1=\\"4\\" y1=\\"180\\" x2=\\"107\\" y2=\\"180\\" id=\\"svg_2\\" stroke=\\"#000000\\"/>
 <rect fill=\\"#000000\\" stroke=\\"#000000\\" stroke-width=\\"6\\" stroke-dasharray=\\"null\\" stroke-linejoin=\\"null\\" stroke-linecap=\\"null\\" x=\\"106\\" y=\\"80\\" width=\\"38\\" height=\\"200\\" id=\\"svg_4\\"/>
 <line fill=\\"none\\" stroke=\\"#000000\\" stroke-width=\\"6\\" stroke-dasharray=\\"null\\" stroke-linejoin=\\"null\\" stroke-linecap=\\"null\\" x1=\\"146\\" y1=\\"159\\" x2=\\"256\\" y2=\\"103\\" id=\\"svg_5\\"/>
 <line fill=\\"none\\" stroke=\\"#000000\\" stroke-width=\\"6\\" stroke-dasharray=\\"null\\" stroke-linejoin=\\"null\\" stroke-linecap=\\"null\\" x1=\\"146\\" y1=\\"207\\" x2=\\"256\\" y2=\\"254\\" id=\\"svg_6\\"/>
 <line fill=\\"none\\" stroke=\\"#000000\\" stroke-width=\\"6\\" stroke-dasharray=\\"null\\" stroke-linejoin=\\"null\\" stroke-linecap=\\"null\\" x1=\\"254\\" y1=\\"105\\" x2=\\"254\\" y2=\\"3\\" id=\\"svg_7\\"/>/>
 <line fill=\\"none\\" stroke=\\"#000000\\" stroke-width=\\"6\\" stroke-dasharray=\\"null\\" stroke-linejoin=\\"null\\" stroke-linecap=\\"null\\" x1=\\"254\\" y1=\\"253\\" x2=\\"252\\" y2=\\"366\\" id=\\"svg_8\\" transform=\\"rotate(-0.7117121815681458 253.00000000001296,309.49999999999835) \\"/>
 <polygon id=\\"svg_9\\" fill=\\"#000000\\" points=\\"202,210.50515747070312 209.38092041015625,227.16769409179688 220.4522705078125,241.7474365234375 202,239.66461181640625 183.5477294921875,241.7474365234375 194.61911010742188,227.16769409179688 202,210.50515747070312 209.38092041015625,227.16769409179688 \\" stroke-width=\\"6\\" stroke=\\"#000000\\" transform=\\"rotate(-10.143350601196289 201.99999999999966,226.12628173828128) \\"/>
</g>
",
        "label": "Transistor",
      },
      Object {
        "type": "separator",
      },
      Object {
        "code": "
<!-- Multistate switch --> 
<g transform=\\"translate(__TRANSLATE_FROM__,__TRANSLATE_TO__)\\"> 
  <g isis_animation=\\"colour\\" isis_ep=\\"__ENTRY_POINT__\\" isis_color_operators=\\"<|0|#e74c3c;;>=|0|#2ecc71;;>=|25|#3498db;;>=|50|#e74c3c;;>=|75|#f1c40f;;>=|100|#e74c3c\\"> 
    <circle cx=\\"30\\" cy=\\"12\\" r=\\"10\\" stroke=\\"#444\\" stroke-width=\\"2\\" fill=\\"#EEE\\" /> 
  </g> 
  <text x=\\"20\\" y=\\"44\\" fill=\\"#666\\" style=\\"font-size:12px\\">St 1</text> 
  <g isis_animation=\\"colour\\" isis_ep=\\"__ENTRY_POINT__\\"  isis_color_operators=\\"<|0|#e74c3c;;>=|0|#2ecc71;;>=|25|#3498db;;>=|50|#e74c3c;;>=|75|#f1c40f;;>=|100|#e74c3c\\"> 
    <circle cx=\\"80\\" cy=\\"12\\" r=\\"10\\" stroke=\\"#444\\" stroke-width=\\"2\\" fill=\\"#EEE\\" /> 
  </g> 
  <text x=\\"70\\" y=\\"44\\" fill=\\"#666\\" style=\\"font-size:12px\\">St 2</text> 
  <g isis_animation=\\"colour\\" isis_ep=\\"__ENTRY_POINT__\\"  isis_color_operators=\\"<|0|#e74c3c;;>=|0|#2ecc71;;>=|25|#3498db;;>=|50|#e74c3c;;>=|75|#f1c40f;;>=|100|#e74c3c\\"> 
    <circle cx=\\"130\\" cy=\\"12\\" r=\\"10\\" stroke=\\"#444\\" stroke-width=\\"2\\" fill=\\"#EEE\\" /> 
  </g> 
  <text x=\\"120\\" y=\\"44\\" fill=\\"#666\\" style=\\"font-size:12px\\">St 3</text> 
</g>;
",
        "label": "Multistate switch",
      },
    ],
  },
  Object {
    "label": "Add animation",
    "submenu": Array [
      Object {
        "code": "
<g isis_animation=\\"scaleX\\" isis_ep=\\"__ENTRY_POINT__\\" isis_domain=\\"0,100\\" isis_fixed=\\"left\\">
<!-- PLACE HERE ELEMENTS TO ANIMATE--> 
</g>
",
        "label": "Scale X",
      },
      Object {
        "code": "
<g isis_animation=\\"scaleY\\" isis_ep=\\"__ENTRY_POINT__\\" isis_domain=\\"0,100\\" isis_fixed=\\"bottom\\">
<!-- PLACE HERE ELEMENTS TO ANIMATE--> 
</g>
",
        "label": "Scale Y",
      },
      Object {
        "type": "separator",
      },
      Object {
        "code": "
<g isis_animation=\\"translateX\\" isis_ep=\\"__ENTRY_POINT__\\" isis_domain=\\"0,100\\" isis_width=\\"200\\" isis_direction=\\"right\\"> 
<!-- PLACE HERE ELEMENTS TO ANIMATE--> 
</g>
",
        "label": "Translate X",
      },
      Object {
        "code": "
<g isis_animation=\\"translateY\\" isis_ep=\\"__ENTRY_POINT__\\" isis_domain=\\"0,100\\" isis_width=\\"200\\" isis_direction=\\"top\\"> 
<!-- PLACE HERE ELEMENTS TO ANIMATE--> 
</g>
",
        "label": "Translate Y",
      },
      Object {
        "type": "separator",
      },
      Object {
        "code": "<g isis_x=\\"\\" isis_y=\\"\\" isis_animation=\\"textBox\\" isis_ep=\\"__ENTRY_POINT__\\" isis_textcolor_operators=\\"<|0|#e74c3c;;>=|0|#2ecc71;;>=|25|#3498db;;>=|50|#e74c3c;;>=|75|#f1c40f;;>=|100|#e74c3c\\" isis_bgcolor_operators=\\"<|0|#e74c3c;;>=|0|#2ecc71;;>=|25|#3498db;;>=|50|#e74c3c;;>=|75|#f1c40f;;>=|100|#e74c3c\\" isis_size=\\"20\\">-</g>",
        "label": "Text box",
      },
      Object {
        "code": "
<g transform=\\"translate(__TRANSLATE_FROM__,__TRANSLATE_TO__)\\"> 
  <g isis_x=\\"0\\" isis_y=\\"0\\" isis_animation=\\"textBox\\" isis_ep=\\"__ENTRY_POINT__\\" isis_textcolor=\\"<|0|#e74c3c;;>=|0|#2ecc71;;>=|25|#3498db;;>=|50|#e74c3c;;>=|75|#f1c40f;;>=|100|#e74c3c\\" isis_font=\\"Digital\\" isis_size=\\"64px\\">-</g>	 
</g>;
",
        "label": "Digital display",
      },
      Object {
        "type": "separator",
      },
      Object {
        "code": "<g isis_animation=\\"rotate\\" isis_ep=\\"__ENTRY_POINT__\\" isis_domain=\\"0,100\\" isis_angle=\\"\\" isis_origin=\\"left,top\\"></g>",
        "label": "Rotation",
      },
      Object {
        "type": "separator",
      },
      Object {
        "code": "<g isis_animation=\\"show\\" isis_ep=\\"__ENTRY_POINT__\\" isis_operators=\\"<=|50|show;;>|50|hide\\"></g>",
        "label": "Show / hide",
      },
      Object {
        "type": "separator",
      },
      Object {
        "code": "<g isis_animation=\\"colour\\" isis_ep=\\"__ENTRY_POINT__\\"   isis_color_operators=\\"<=|50|#8AE;;>|50|#45C\\"></g>",
        "label": "Colour",
      },
    ],
  },
  Object {
    "label": "Add Entry point",
    "submenu": Array [
      Object {
        "code": "
<!-- Entry point -->
<g isis_animation=\\"\\" isis_ep=\\"TMMGT_BC_VIRTCHAN3\\"></g>
",
        "label": "TMMGT_BC_VIRTCHAN3",
      },
      Object {
        "code": "
<!-- Entry point -->
<g isis_animation=\\"\\" isis_ep=\\"AGA_AM_PRIORITY\\"></g>
",
        "label": "AGA_AM_PRIORITY",
      },
    ],
  },
]
`;
